# test-recommender

./: REQUIREMENTS.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  agent.py  main.py  pyproject.toml
backend/.claude/skills/test-case-recommender/: SKILL.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/components/: ChatPanel.tsx  InputForm.tsx  PRInfoPanel.tsx  ResultsView.tsx  StatusBadge.tsx  StreamItem.tsx  TestCasesTab.tsx  ThinkingStream.tsx  icons.tsx
frontend/src/hooks/: useAnalysis.ts  useChat.ts
